ingress-central.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app-ingress
  namespace: app
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - app1.ramosecajado.com
    - app2.ramosecajado.com
    secretName: ingress-cert
  rules:
  - host: app1.ramosecajado.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kuard
            port:
              number: 80
  - host: app2.ramosecajado2.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kuard
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observability-ingress
  namespace: observability
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.ramosecajado.com
    secretName: ingress-cert
  rules:
  - host: grafana.ramosecajado.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: monitor-grafana
            port:
              name: http-web
  - host: prometheus.ramosecajado.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: monitor-prometheus
            port:
              name: http-web
